--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:scrollbars="none"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                     app:strokeWidth="6dp"
                     android:src="#a9a9a9"
                     android:padding="5dp"
-                    app:shapeAppearanceOverlay="@style/roundedImageView"/>
+                    app:shapeAppearanceOverlay="@style/roundedImageView" />
             </LinearLayout>
 
             <!-- Learning Progress Section -->
@@ -161,31 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/category_intro"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:text="Introduction"
-                    android:textStyle="bold"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:id="@+id/category_history"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:text="History"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:id="@+id/category_blockchain_net"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:text="Blockchain Networks"
-                    android:textColor="@color/black" />
+                <!-- Categories will be dynamically added here -->
             </LinearLayout>
         </HorizontalScrollView>
 
@@ -209,7 +185,7 @@
             android:orientation="vertical"
             android:background="@drawable/vprs_bg"
             android:padding="12dp">
-            <!-- This container will be updated dynamically -->
+            <!-- Lesson cards will be dynamically added here -->
         </LinearLayout>
 
     </LinearLayout>
