--- a/app/src/main/res/drawable/header_home.xml
+++ b/app/src/main/res/drawable/header_home.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/card" />
-    <stroke android:width="2dp"/>
-    <corners android:radius="10dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Overall border with uniform stroke width -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" /> <!-- Transparent fill if needed -->
+            <stroke android:width="5dp" android:color="@color/btn" /> <!-- Default stroke width for top, left, right -->
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+
+    <!-- Thicker bottom stroke -->
+    <item android:bottom="5dp"> <!-- Adjust thickness here for the bottom stroke -->
+        <shape android:shape="rectangle">
+            <solid android:color="@color/card" />
+            <stroke android:width="2dp" android:color="@color/btn" /> <!-- Thicker stroke only for bottom -->
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+
+</layer-list>
