--- a/app/src/main/res/layout/activity_lessons.xml
+++ b/app/src/main/res/layout/activity_lessons.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:background="@android:color/white">
 
+    <!-- Container for lesson cards -->
     <LinearLayout
         android:id="@+id/lessons_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp" />
+        android:divider="?android:attr/dividerVertical"
+        android:dividerPadding="8dp" />
 
 </ScrollView>
