--- a/app/src/main/res/layout/activity_vprs_result.xml
+++ b/app/src/main/res/layout/activity_vprs_result.xml
@@ -46,78 +46,6 @@
                 android:padding="0dp">
 
                 <LinearLayout
-                    android:id="@+id/top_section"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/result_card"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:id="@+id/top_section_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/camera_btn"
-                        android:fontFamily="@font/righteous"
-                        android:gravity="center"
-                        android:paddingTop="10dp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:paddingBottom="10dp"
-                        android:text="Detected Pattern"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <ImageView
-                        android:id="@+id/top_section_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="12dp"
-                        android:background="@android:color/darker_gray"
-                        android:contentDescription="Recognized Pattern Image"
-                        android:scaleType="centerInside" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/middle_section"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/result_card"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:id="@+id/middle_section_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:fontFamily="@font/righteous"
-                        android:gravity="center"
-                        android:text="Pattern Information:"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/middle_section_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="Lorem ipsum dolor sit amet consectetur. Neque arcu posuere accumsan facilisis turpis sodales vitae proin. Enim consectetur turpis velit mi. Nunc ornare nulla adipiscing vel ac ultricies faucibus ac bibendum. Risus vitae porttitor risus at. Urna ac egestas diam porttitor convallis id ac dui amet. Adipiscing in quam nulla etiam platea adipiscing elementum orci."
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/bottom_section"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -129,7 +57,7 @@
                     android:padding="16dp">
 
                     <TextView
-                        android:id="@+id/bottom_section_title"
+                        android:id="@+id/allPatternTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -140,20 +68,133 @@
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:paddingBottom="10dp"
-                        android:text="Support, Resistance, and Trend"
+                        android:text="Detected Patterns"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <ImageView
-                        android:id="@+id/bottom_section_image"
+                        android:id="@+id/allPatternImage"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="12dp"
                         android:background="@android:color/darker_gray"
                         android:contentDescription="Support and Resistance Image"
-                        android:scaleType="centerInside" />
+                        android:scaleType="fitXY" />
                 </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/detectedPattern"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/result_card"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/eachPatternTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@drawable/camera_btn"
+                        android:fontFamily="@font/righteous"
+                        android:gravity="center"
+                        android:paddingTop="10dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingBottom="10dp"
+                        android:text="Detected Pattern Type"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/eachPatternImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="12dp"
+                        android:background="@android:color/darker_gray"
+                        android:contentDescription="Recognized Pattern Image"
+                        android:scaleType="fitXY" />
+
+                    <LinearLayout
+                        android:id="@+id/middle_section"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/header_home"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+
+                        <TextView
+                            android:id="@+id/middle_section_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
+                            android:fontFamily="@font/righteous"
+                            android:gravity="center"
+                            android:text="LEARN MORE"
+                            android:layout_marginBottom="3dp"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp"
+                            android:textAlignment="center"
+                            android:layout_weight="1"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/linkToLesson"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/level"
+                            android:layout_marginBottom="3dp"
+                            android:src="@drawable/baseline_arrow_right_alt_24"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/sandp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/result_card"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/sandptitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@drawable/camera_btn"
+                        android:fontFamily="@font/righteous"
+                        android:gravity="center"
+                        android:paddingTop="10dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingBottom="10dp"
+                        android:text="Whole Chart Support and Resistance"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/sandpImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="12dp"
+                        android:background="@android:color/darker_gray"
+                        android:contentDescription="Support and Resistance Image"
+                        android:scaleType="fitXY" />
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:id="@+id/sentiment"
@@ -175,7 +216,7 @@
                         android:fontFamily="@font/righteous"
                         android:gravity="center"
                         android:padding="10dp"
-                        android:text="Score based on support, resistance, and pattern"
+                        android:text="Score based on support, resistance, and patterns"
                         android:textColor="@android:color/black"
                         android:textSize="13sp" />
 
@@ -184,13 +225,17 @@
                         android:layout_height="wrap_content"
                         android:gravity="center">
 
-                        <ImageView
+                        <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/sentiment_result"
-                            android:layout_width="230dp"
-                            android:layout_height="230dp"
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="20dp"
-                            android:background="@drawable/sentiment_bg"
+                            app:strokeColor="#008000"
+                            app:strokeWidth="20dp"
+                            app:shapeAppearanceOverlay="@style/roundedImageView"
+                            android:padding="10dp"
+                            android:background="@color/white"
                             android:scaleType="centerInside"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -206,22 +251,7 @@
                             app:layout_constraintTop_toTopOf="parent"
                             android:gravity="center"
                             android:orientation="vertical">
-                            <TextView
-                                android:id="@+id/pattern_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:elevation="5dp"
-                                android:fontFamily="@font/righteous"
-                                android:gravity="center"
-                                android:padding="6dp"
-                                android:text="Pattern_Name"
-                                android:textColor="@android:color/black"
-                                android:textSize="14sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+
                             <TextView
                                 android:id="@+id/sentiment_indicator"
                                 android:layout_width="wrap_content"
@@ -229,8 +259,8 @@
                                 android:layout_gravity="center"
                                 android:fontFamily="@font/righteous"
                                 android:gravity="center"
-                                android:padding="10dp"
-                                android:text="Sentiment"
+                                android:padding="12dp"
+                                android:text="Sentiment/Bias"
                                 android:background="@drawable/camera_btn"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
