--- a/app/src/main/res/drawable/quiz_bg.xml
+++ b/app/src/main/res/drawable/quiz_bg.xml
@@ -1,6 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#9b51e0" />
+    <solid android:color="@color/card" />
     <corners android:radius="16dp" />
+    <stroke android:width="3dp" android:color="@color/highlight"/>
     <padding
         android:left="16dp"
         android:top="16dp"
