--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -22,7 +22,7 @@
 
             <!-- Back Button -->
             <ImageView
-                android:id="@+id/back_button"
+                android:id="@+id/back_arrow"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/arrow_back_24"
@@ -84,8 +84,10 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="8dp"
                     android:text="1/25"
+                    android:padding="4dp"
+                    android:background="@drawable/level"
                     android:fontFamily="@font/righteous"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/btn"
                     android:textSize="16sp" />
 
                 <!-- Question Text -->
@@ -99,7 +101,7 @@
                     android:textAlignment="textStart"
                     android:fontFamily="@font/righteous"
                     android:text="question goes here"
-                    android:textColor="@color/white"
+                    android:textColor="@color/btn"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -127,7 +129,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="#9b51e0"
+            android:backgroundTint="@color/black"
             android:paddingVertical="12dp"
             android:text="Next question"
             android:textColor="@color/white"
